[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felipe Operti", email = "felipe.operti@realemutua.it" }
]
requires-python = ">=3.10"
dependencies = [
    "fast-agent-mcp>=0.2.20",
    "fastapi[standard]>=0.115.12",
    "httpx[http2]>=0.28.1",
    "jupyter>=1.1.1",
    "langchain>=0.3.24",
    "langchain-mcp-adapters>=0.0.9",
    "langchain-openai>=0.3.14",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.21",
    "langgraph-checkpoint-sqlite>=2.0.7",
    "langsmith>=0.3.39",
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.7",
    "python-dotenv>=1.1.0",
    "tabulate>=0.9.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



